--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ scooter: &scooter "#328998"
 governor_bay: &governor_bay "#59578E"
 cosmic: &cosmic "#80425F"
 
-theme_color: *cello
+theme_color: *scooter
 description: Ulises Chialva - Maestro de Cálculos
 repository: RobertDeRose/pillar-resume-template
 
